--- a/src/components/Body/Body.css
+++ b/src/components/Body/Body.css
@@ -5,6 +5,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    overflow: auto;
 }
 
 .body-container{
@@ -14,6 +15,10 @@
     display: flex;
     padding: 10px;
 }
+.content-container{
+    width: 65%;
+    
+}
 
 @media screen and (max-width:700px) {
     .body-container{
@@ -21,13 +26,13 @@
         flex-direction: column;
         align-items: center;
         justify-content: flex-start;
+        background-color: bisque;
+        
     }
 
     .content-container{
-        width: 100%;
+        width: 90%;
+        background-color: aqua;
     }
 }
 
-.content-container{
-    width: 65%;
-}
