--- a/src/index.css
+++ b/src/index.css
@@ -42,6 +42,7 @@ body{
 }
 
 @media screen and (max-width:700px) {
+  .main-container,
   .menu-container{
     width: var(--width-container-sm);
   }
