--- a/src/components/Body/Menu/Menu.css
+++ b/src/components/Body/Menu/Menu.css
@@ -7,22 +7,38 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    
+    flex-direction: column;
 
 }
-.menu-items{
+.menu-item{
     font-size: 1.5rem;
+    background-color: aqua;
 }
 
-.menu-items li{
-    margin: 2rem 0;
+.menu-item *{
+    margin: 10px 0;
     cursor: pointer;
     display: flex;
     gap: 10px;
     align-items: center;
+    color: black;
+    transition: all 0.3s ease-out;    
+    position: relative;
 }
 
-li{
-    text-decoration: none;
+.menu-item *:hover{
+    color: var(--color-hd);
     
+
 }
+
+.pointer{
+    display: block;
+    position: absolute;
+    left: -30px;
+}
+
+.pointer.hide{
+    display: none;
+}
+
