--- a/src/components/Body/InputOrder/Input_Order.css
+++ b/src/components/Body/InputOrder/Input_Order.css
@@ -109,13 +109,14 @@ form>.btn-container{
   gap: 10px;
   width: 100px;
   
-  margin: 20px 0;
+  margin: 0;
 }
 
 .ord{
   width: 50px;
 }
 
-.edit,.delete{
+.delete{
   cursor: pointer;
+  color: tomato;
 }
