--- a/src/components/Body/Body.css
+++ b/src/components/Body/Body.css
@@ -20,6 +20,13 @@
     
 }
 
+@media screen and (min-width:1600px) {
+    .body-container{
+        
+        width: 1300px;
+    }
+}
+
 @media screen and (max-width:700px) {
     .body-container{
         display: flex;
