--- a/src/index.css
+++ b/src/index.css
@@ -69,24 +69,36 @@ body{
   background-color: var(--color-hd);
   border: none;
   border-radius: 2pt;
-  width: 5rem;
-  padding: 5px;
+  width: 6rem;
+  padding: 10px;
   cursor: pointer;
 }
 
 .btn-scd{
   background-color: transparent;
   border: 1px solid var(--color-hd);
-  width: 5rem;
-  padding: 5px;
+  width: 6rem;
+  padding: 10px;
   cursor: pointer;
   border-radius: 2pt;
 }
 
 
 .popup-container{
-  width:30%;
-  height: 50px;
+  width:500px;
+  height: 200px;
+  padding: 30px;
+  border-radius: 10px;
+  background-color: white;
+  border: 1px solid rgb(197, 197, 197);
+  z-index: 100;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
 }
 
 li{
@@ -98,4 +110,12 @@ li span{
 }
 li:hover{
   color: var(--color-hd);
+}
+
+.close-btn{
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  font-size: 20px;
+  cursor: pointer;
 }
