--- a/src/components/Body/Body.css
+++ b/src/components/Body/Body.css
@@ -37,15 +37,15 @@
     .body-container{
         display: flex;
         flex-direction: column;
-        align-items: center;
+        align-items: flex-start;
         justify-content: flex-start;
-        
+        width: 100%;
         
         
     }
 
     .content-container{
-        width: 90%;
+        width: 100%;
         
     }
 }
