--- a/src/components/Body/Body.css
+++ b/src/components/Body/Body.css
@@ -19,7 +19,7 @@
 }
 .content-container{
     width: 100%;
-    background-color: aqua;
+    height: 100%;
     
 }
 
@@ -29,6 +29,7 @@
     .body-container{
         
         width: 100%;
+        
         
     }
 }
@@ -40,7 +41,8 @@
         align-items: flex-start;
         justify-content: flex-start;
         width: 100%;
-        
+        height: 100%;
+        padding-top: 0px;
         
     }
 
