--- a/src/components/Body/Menu/Menu.css
+++ b/src/components/Body/Menu/Menu.css
@@ -8,12 +8,16 @@
     .menu-container{
       width: 100%;
       margin-top: 0;
+      margin-right: 0;
+      margin-left: 0;
       background-color: var(--color-hd);
     }
 
     .menu-container .title{
         display: none;
     }
+
+  
 }
 
   
