--- a/src/components/Body/InputOrder/Input_Order.css
+++ b/src/components/Body/InputOrder/Input_Order.css
@@ -2,14 +2,28 @@
     background-color: white;
     padding: 2rem;
     margin-bottom: 30px;
-    height: 100%;
+    height: 90%;
     
   }
 
   .big_container{
     
-    height: 95%;
+    height: 100%;
+    width: 95%;
+    margin: 0 auto;
   }
+
+  @media screen and (min-width:1600px) {
+    .big_container{
+        
+        width: 95%;
+        
+        
+        
+    }
+}
+
+
   form{
     width: 100%;
     display: flex;
