--- a/src/components/Body/Body.css
+++ b/src/components/Body/Body.css
@@ -4,7 +4,7 @@
     background-color: var(--color-bg);
     display: flex;
     align-items: center;
-    justify-content: flex-start;
+    justify-content: center;
     overflow: auto;
     
 }
@@ -12,11 +12,16 @@
 .body-container{
     height: 95%;
    
-    gap: 3rem;
+    
     display: flex;
+    align-items: flex-start;
+    
     width: 100vw;
     
+    
 }
+
+
 .content-container{
    width: 90%;
     height: 100%;
@@ -25,14 +30,7 @@
 
 
 
-@media screen and (min-width:1600px) {
-    .body-container{
-        
-        width: 100%;
-        
-        
-    }
-}
+
 
 @media screen and (max-width:1600px) {
     .body-container{
@@ -43,6 +41,7 @@
         width: 100%;
         height: 100%;
         padding-top: 0px;
+        gap: 3rem;
         
     }
 
