--- a/src/components/Body/Menu/Menu.css
+++ b/src/components/Body/Menu/Menu.css
@@ -1,8 +1,11 @@
 .menu-container{
     background-color: white;
     height: fit-content;
+    margin-left: 49px;
     
 }
+
+
 
 @media screen and (max-width:1600px){
     .menu-container{
