--- a/src/components/Body/OrderList/OrderList.css
+++ b/src/components/Body/OrderList/OrderList.css
@@ -5,6 +5,12 @@
     align-items: flex-start;
 }
 
+.left{
+    display: flex;
+    gap: 10px;
+    flex-direction: column;
+}
+
 .date-filter{
     
     width: 100%;
@@ -79,4 +85,8 @@
         flex-direction: column;
         gap: 20px;
     }
+}
+
+.btn.download{
+    width: fit-content;
 }
